# python-redditcli

./: .gitignore  README.md  clientflow.py  commands.py  main.py  requirements.txt  setup.cfg  setup.py
redditcli/: main.py  shell.py
redditcli/api/: __init__.py  account.py  base.py  client.py  httpclient.py
redditcli/commands/: account.py
redditcli/tests/unit/: test_client.py
