[metadata]
name = redditcli
summary = Python cli for Reddit API
description_file= README.md
license = Apache License, Version 2.0
author='Gobin Sougrakpam'
author_email='gobin.sougrakpam@gmail.com'
url='https://github.com/gobins/python-reddit-api'

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    redditcli

[entry_points]
console_scripts =
    redditcli = redditcli.shell:main
